Fix incorrect unicode char at end of block.  Thanks Jonas Hurrelmann for email and patch.

BUG:131938

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=570191